# PreFab

./: .gitattributes  .gitignore  .pylintrc  404.html  CHANGELOG.md  CNAME  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: docs-deploy.yml  python-publish.yml
CHANGELOG/: index.html
blog/: index.html
blog/2024/09/23/prefab-v110/: index.html
blog/2024/10/10/python-for-photonics-development/: index.html
blog/PreFab-v1.1.0/: index.html
blog/archive/2024/: index.html
blog/prefab-v1.1.0/: index.html
blog/python-for-photonics/: index.html
devices/: devices.gds
docs/: .markdownlint.json  CHANGELOG.md  CNAME  fab_aware_design.md  index.md  models.md  python-for-photonics.md  setup.md
docs/blog/: .authors.yml  PreFab-v1.1.0.ipynb  prefab-v1.1.0.ipynb  python-for-photonics.md
docs/blog/posts/: prefab-v1.1.0.md  python-for-photonics.md
docs/examples/: 1_prediction.ipynb  1_prediction.md  2_correction.ipynb  2_correction.md  4_SEM_generation.ipynb  5_prediction_simulation.ipynb  6_WDM_FAID.ipynb  7_sidewall_simulation.ipynb
docs/overrides/: main.html
docs/reference/: compare.md  device.md  geometry.md  models.md  predict.md  read.md  shapes.md
examples/: 1_prediction.ipynb  2_correction.ipynb  2_prediction_gds.ipynb  3_correction.ipynb  4_prediction_silicon_nitride.ipynb  example_ECSE596.ipynb  example_prediction.ipynb
examples/1_prediction/: index.html
examples/2_correction/: 2_correction.ipynb  index.html
examples/3_sidewall_angle/: 3_sidewall_angle.ipynb  index.html
examples/4_SEM_generation/: 4_SEM_generation.ipynb  index.html
examples/5_prediction_simulation/: 5_prediction_simulation.ipynb  index.html
examples/7_sidewall_simulation/: index.html
fab_aware_design/: index.html
models/: index.html
overrides/: main.html
prefab/: __init__.py  __main__.py  compare.py  device.py  geometry.py  io.py  models.py  predict.py  predictor.py  processor.py  read.py  shapes.py
prefab/models/: __init__.py  base.py  evaluation.py
python-for-photonics/: index.html
reference/compare/: index.html
reference/device/: index.html
reference/geometry/: index.html
reference/models/: index.html
reference/predict/: index.html
reference/read/: index.html
reference/shapes/: index.html
scripts/: convert_notebooks.py
search/: search_index.json
setup/: index.html
site/: 404.html  index.html  objects.inv  sitemap.xml
site/compare/: index.html
site/device/: index.html
site/examples/1_prediction/: index.html
site/examples/2_correction/: index.html
site/examples/2_prediction_gds/: index.html
site/examples/3_correction/: index.html
site/examples/4_prediction_silicon_nitride/: index.html
site/geometry/: index.html
site/models/: index.html
site/read/: index.html
site/reference/compare/: index.html
site/reference/device/: index.html
site/reference/geometry/: index.html
site/reference/models/: index.html
site/reference/read/: index.html
site/search/: search_index.json
stylesheets/: extra.css
tests/: test_prediction.py
