[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefab"
version = "1.1.2"
description = "Artificial nanofabrication of integrated photonic circuits using deep learning"
authors = [{ name = "Dusan Gostimirovic", email = "dusan@prefabphotonics.com" }]
keywords = ["photonics", "nanofabrication", "machine-learning"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "gdstk>=0.9.55",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pillow",
    "pydantic",
    "requests",
    "scikit-image",
    "scipy",
    "toml",
    "tqdm",
]

[project.urls]
Homepage = "https://prefabphotonics.com"
Repository = "https://github.com/PreFab-Photonics/PreFab"
Docs = "https://docs.prefabphotonics.com"
