[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prefab"
version = "1.4.2"
description = "Artificial nanofabrication of integrated photonic circuits using deep learning"
authors = [{ name = "PreFab Photonics Inc.", email = "hi@prefabphotonics.com" }]
keywords = [
    "integrated-photonics",
    "electronic-design-automation",
    "nanofabrication",
    "semiconductor-manufacturing",
    "deep-learning",
    "machine-learning",
    "computer-vision",
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "autograd",
    "gdstk>=0.9.55",
    "ipykernel>=6.31.0",
    "matplotlib",
    "numpy",
    "opencv-python-headless",
    "pillow",
    "pydantic>=2.10",
    "requests",
    "scikit-image",
    "scipy",
    "toml",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]

[project.urls]
Homepage = "https://prefabphotonics.com"
Repository = "https://github.com/PreFab-Photonics/PreFab"
Docs = "https://docs.prefabphotonics.com"

[project.scripts]
prefab = "prefab.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["prefab"]

[tool.hatch.build.targets.sdist]
include = [
    "prefab/",
]

[tool.basedpyright]
typeCheckingMode = "standard"
